Fix JDK 24 compilation issue